--- a/lesson01/styles.css
+++ b/lesson01/styles.css
@@ -8,5 +8,5 @@ body {
 ul,li,p,h3,h1 {
     position: relative;
     font-family: 'Times New Roman', Times, serif;
-    color: #ffffff;
+    color: #ffffff !important;
 }
